Mostly fixed post page header styling
Page links still not aligned! Might use text anyways….

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -46,27 +46,37 @@
 // POST PAGE
 
 .page-header-page {
-	color: $header-heading-color;
-	background-color: purple;
-	height: 100px;
+	background-image: url("/assets/images/headerbg.jpg");
+	background-position: 0% 50%;	
+	padding: 30px;
+	margin: 0;
 
-	a, h2 {
-		display: inline-block;
-		// float: left;
-	}
-
-	.project-name {
-		margin: auto;
-		padding: 20px;
-	}
-
-	.project-tagline-short {
+	// Enclosing list
+	ul {
 		margin: 0;
 		padding: 0;
 	}
 
-	.btn {
-		
+	// Page links and title
+	a, h2 {
+		display: inline-block;
+		color: white;
+	}
+
+	.project-name {
+		margin: 0;
+		padding: 0;
+	}
+
+	.project-tagline-short {
+		margin-left: 20px;
+		font-weight: normal;
+		opacity: 0.7;
+		font-size: 1.15rem;
+	}
+
+	.links {
+		float: right;
 	}
 
 }
